revamper typography, color and style resources in whole app

--- a/app/src/main/res/drawable/mid_grey_ripple.xml
+++ b/app/src/main/res/drawable/mid_grey_ripple.xml
@@ -17,4 +17,4 @@
 
 <ripple
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/midGrey" />
+    android:color="@color/darkGrey1" />
