--- a/app/src/main/res/drawable/no_connection.xml
+++ b/app/src/main/res/drawable/no_connection.xml
@@ -103,6 +103,6 @@
         android:pathData="@string/phone_button"
         android:strokeWidth="4"
         android:strokeLineCap="round"
-        android:strokeColor="@color/fog"/>
+        android:strokeColor="@color/grey3"/>
 
 </vector>
