--- a/app/src/main/res/layout/dialog_message.xml
+++ b/app/src/main/res/layout/dialog_message.xml
@@ -17,8 +17,8 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:src="@drawable/ic_error_grey_56dp"
-        tools:ignore="ContentDescription"
-        android:tint="@color/fog"/>
+        style="@style/Widget.Splash.ImageView.Light"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/titleTv"
@@ -46,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="32dp"
-        android:background="@color/mist" />
+        android:background="@color/dividerLight" />
 
     <Button
         android:id="@+id/actionBtn"
