--- a/app/src/main/res/layout/fragment_all_photos.xml
+++ b/app/src/main/res/layout/fragment_all_photos.xml
@@ -2,7 +2,6 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -19,14 +18,9 @@
 
     <me.zhanghai.android.materialprogressbar.MaterialProgressBar
         android:id="@+id/progressBar"
-        android:layout_width="56dp"
-        android:layout_height="4dp"
         android:layout_gravity="center"
         android:indeterminate="true"
-        app:mpb_progressStyle="horizontal"
-        app:mpb_useIntrinsicPadding="false"
-        app:mpb_progressBackgroundTint="@android:color/transparent"
-        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
+        style="@style/Widget.Splash.HorizontalProgressbar.Small"
         android:visibility="gone"/>
 
     <LinearLayout
@@ -36,7 +30,7 @@
         android:orientation="vertical"
         android:layout_gravity="center"
         android:gravity="center_horizontal"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <ImageView
             android:id="@+id/noConnection"
@@ -72,7 +66,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             style="@style/Widget.Splash.InlineActionButton"
-            android:drawableTop="@drawable/ic_replay_black_24dp"
-            android:text="@string/retry_btn_text"/>
+            android:drawableTop="@drawable/ic_replay_black_24dp" />
     </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
