--- a/app/src/main/res/layout/fragment_download_info.xml
+++ b/app/src/main/res/layout/fragment_download_info.xml
@@ -36,7 +36,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginStart="4dp"
                 android:src="@drawable/ic_file_download_black_24dp"
-                android:tint="@color/fog"
+                android:tint="@color/grey3"
                 tools:ignore="ContentDescription" />
         </FrameLayout>
 
@@ -66,7 +66,7 @@
                 android:progressTint="@color/green"
                 app:mpb_progressStyle="horizontal"
                 app:mpb_useIntrinsicPadding="false"
-                app:mpb_progressBackgroundTint="@color/midGrey"
+                app:mpb_progressBackgroundTint="@color/grey3"
                 style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal" />
 
             <LinearLayout
@@ -141,7 +141,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="@dimen/download_sheet_height"
-        android:background="@color/fog"
+        android:background="@color/grey3"
         android:visibility="gone"/>
 
     <FrameLayout
