--- a/app/src/main/res/layout/fragment_photo_description.xml
+++ b/app/src/main/res/layout/fragment_photo_description.xml
@@ -10,9 +10,7 @@
     <com.sonu.app.splash.ui.widget.WidthFitSquareLayout
         android:id="@+id/picParentWfsl"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/green"
-        android:visibility="visible">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/photoIv"
@@ -32,8 +30,7 @@
             android:layout_height="wrap_content"
             android:padding="16dp"
             android:src="@drawable/ic_arrow_back_black_24dp"
-            android:tint="@color/fog"
-            style="@style/Widget.Splash.BorderlessImageButton"
+            style="@style/Widget.Splash.BorderlessImageButton.Light"
             tools:ignore="ContentDescription" />
 
         <ImageButton
@@ -43,8 +40,7 @@
             android:padding="16dp"
             android:layout_gravity="end"
             android:src="@drawable/ic_info_black_24dp"
-            android:tint="@color/fog"
-            style="@style/Widget.Splash.BorderlessImageButton"
+            style="@style/Widget.Splash.BorderlessImageButton.Light"
             tools:ignore="ContentDescription"
             android:visibility="gone"/>
 
@@ -55,7 +51,7 @@
             android:layout_gravity="end"
             android:layout_margin="16dp"
             app:mpb_progressStyle="circular"
-            app:mpb_indeterminateTint="@color/fog"/>
+            app:mpb_indeterminateTint="@color/activeIconLight"/>
 
         <ImageButton
             android:id="@+id/fullScreenIb"
@@ -64,15 +60,14 @@
             android:padding="16dp"
             android:layout_gravity="bottom|end"
             android:src="@drawable/ic_fullscreen_black_24dp"
-            android:tint="@color/fog"
-            style="@style/Widget.Splash.BorderlessImageButton"
+            style="@style/Widget.Splash.BorderlessImageButton.Light"
             tools:ignore="ContentDescription"
             android:visibility="gone"/>
     </com.sonu.app.splash.ui.widget.WidthFitSquareLayout>
 
     <FrameLayout
         android:id="@+id/photoLocationFl"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:visibility="gone">
@@ -84,8 +79,9 @@
             android:layout_marginTop="12dp"
             android:layout_marginBottom="12dp"
             android:src="@drawable/ic_place_black_24dp"
-            tools:ignore="ContentDescription"
-            android:tint="@color/green"/>
+            style="@style/Widget.Splash.ImageView"
+            android:tint="@color/green"
+            tools:ignore="ContentDescription"/>
 
         <TextView
             android:id="@+id/photoLocationTv"
@@ -93,23 +89,18 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="40dp"
-            android:textAppearance="@style/TextAppearance.Body2"
+            android:textAppearance="@style/TextAppearance.LocationTitle"
             android:text="Montreal, Canada"/>
     </FrameLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/fog" />
 
     <TextView
         android:id="@+id/photoDescriptionTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:textAppearance="@style/TextAppearance.Headline"
-        android:text="Description"
-        android:background="@color/fog"/>
+        android:background="@color/grey2"
+        android:textAppearance="@style/TextAppearance.PhotoDescription"
+        android:text="Description" />
 
     <LinearLayout
         android:id="@+id/photoActionsLl"
@@ -128,9 +119,9 @@
             android:layout_weight="1"
             android:drawableTop="@drawable/ic_heart_solid_black_24dp"
             android:drawableTint="@color/pink"
-            android:text="--"
             style="@style/Widget.Splash.InlineActionButton"
-            android:clickable="false"/>
+            android:background="@null"
+            android:text="--"/>
 
         <Button
             android:id="@+id/photoViewsCountBtn"
@@ -139,9 +130,9 @@
             android:layout_weight="1"
             android:drawableTop="@drawable/ic_remove_red_eye_black_24dp"
             android:drawableTint="@color/blue"
-            android:text="--"
             style="@style/Widget.Splash.InlineActionButton"
-            android:clickable="false"/>
+            android:background="@null"
+            android:text="--" />
 
         <Button
             android:id="@+id/photoDownloadsCountBtn"
@@ -150,15 +141,15 @@
             android:layout_weight="1"
             android:drawableTop="@drawable/ic_file_download_black_24dp"
             android:drawableTint="@color/teal"
-            android:text="--"
             style="@style/Widget.Splash.InlineActionButton"
-            android:clickable="false"/>
+            android:background="@null"
+            android:text="--" />
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/fog" />
+        android:background="@color/divider" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -167,20 +158,15 @@
         android:layout_marginBottom="16dp"
         android:orientation="vertical">
 
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-        </FrameLayout>
         <android.support.v7.widget.CardView
             android:id="@+id/artistPicCv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_gravity="center_horizontal"
+            android:stateListAnimator="@animator/raise"
             android:clickable="true"
             android:focusable="true"
-            android:stateListAnimator="@animator/raise"
             app:cardCornerRadius="36dp"
             app:cardElevation="0dp">
 
@@ -198,8 +184,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:layout_gravity="center_horizontal"
-            android:text="Amanshu Raikwar"
-            android:textAppearance="@style/TextAppearance.ArtistName"/>
+            android:textAppearance="@style/TextAppearance.ArtistName"
+            android:text="Amanshu Raikwar" />
 
         <TextView
             android:id="@+id/artistUsernameTv"
@@ -207,7 +193,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="0dp"
             android:layout_gravity="center_horizontal"
-            android:text="\@amanshuraikwar"
-            android:textAppearance="@style/TextAppearance.ArtistUsername"/>
+            android:textAppearance="@style/TextAppearance.ArtistUsername"
+            android:text="\@amanshuraikwar" />
     </LinearLayout>
 </LinearLayout>
