--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,37 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">@color/coal</color>
+    <color name="colorPrimary">@color/darkGrey3</color>
     <color name="colorPrimaryDark">@color/colorPrimary</color>
-    <color name="colorAccent">@color/lightBlue</color>
+    <color name="colorAccent">@color/lightCyan</color>
 
-    <color name="coal">#212121</color>
-    <color name="charcoal">#757575</color>
+    <!-- white shades-->
+    <color name="white">#ffffff</color>
+    <color name="grey1">#fafafa</color>
+    <color name="grey2">#f5f5f5</color>
+    <color name="grey3">#e0e0e0</color>
 
-    <color name="midGrey">#40808080</color>
+    <color name="darkGrey1">#424242</color>
+    <color name="darkGrey2">#303030</color>
+    <color name="darkGrey3">#212121</color>
+    <color name="black">#000000</color>
 
-    <color name="immersive_bars">#99000000</color>
-    <color name="background_dark">#ff333333</color>
+    <!-- text colors-->
+    <color name="primaryText">#EE000000</color>
+    <color name="secondaryText">#8A000000</color>
+    <color name="disableHintText">#61000000</color>
+    <color name="divider">#1F000000</color>
+
+    <color name="primaryTextLight">#ffffffff</color>
+    <color name="secondaryTextLight">#B3ffffff</color>
+    <color name="disableHintTextLight">#80ffffff</color>
+    <color name="dividerLight">#1Fffffff</color>
+
+    <!-- dark translucent-->
+    <color name="scrim">#99323232</color>
+
+    <!-- icon colors -->
+    <color name="activeIconLight">@color/white</color>
+    <color name="inactiveIconLight">@color/disableHintTextLight</color>
+
+    <color name="activeIcon">@color/secondaryText</color>
+    <color name="inactiveIcon">@color/disableHintText</color>
+
+    <color name="lightCyan">#84FFFF</color>
 
     <color name="lightBlue">#80DEEA</color>
     <color name="sky">#B2EBF2</color>
 
-    <color name="scrim">#99323232</color>
-
     <color name="green">#66BB6A</color>
-
-    <color name="grey">#888888</color>
-    <color name="darkGrey">#616161</color>
 
     <color name="darkRed">#B71C1C</color>
     <color name="midRed">#EF5350</color>
 
     <color name="darkOrange">#E65100</color>
-
-    <color name="white">#ffffff</color>
-    <color name="fog">#eeeeee</color>
-    <color name="lightSmoke">#cceeeeee</color>
-    <color name="smoke">#dfeeeeee</color>
-    <color name="mist">#55eeeeee</color>
 
     <color name="pink">#E91E63</color>
     <color name="blue">#2196F3</color>
