--- a/app/src/main/res/layout/fragment_all_photos.xml
+++ b/app/src/main/res/layout/fragment_all_photos.xml
@@ -30,7 +30,7 @@
         android:orientation="vertical"
         android:layout_gravity="center"
         android:gravity="center_horizontal"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <ImageView
             android:id="@+id/noConnection"
